# stygmorgan

stygmorgan/: ChangeLog  Makefile  Makefile.in  README  TODO  config.h.in  config.status  configure  configure.in
stygmorgan/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
stygmorgan/data/: GMPresetList.txt  Makefile  Makefile.am  Makefile.in
stygmorgan/doc/: Makefile  Makefile.am  Makefile.in
stygmorgan/doc/DSPeffects/: Makefile  Makefile.am  Makefile.in  freberv.asm  fv-basstreble.inc  fv-controls.inc  fv-filters-reduced.inc  fv-filters.inc  fv-routes.inc  michorus.asm
stygmorgan/doc/examples/: Makefile  Makefile.am  Makefile.in
stygmorgan/doc/html/: Makefile  Makefile.am  Makefile.in  stygmorgan.html
stygmorgan/src/: Makefile  Makefile.am  Makefile.in  config.h.in  main.C  stygmaboutui.cxx  stygmaboutui.fl  stygmaboutui.h  stygmeditui.cxx  stygmeditui.fl  stygmeditui.h  stygmhelpui.cxx  stygmhelpui.fl  stygmhelpui.h  stygmicon128.xpm  stygmorgan  stygmorgan.C  stygmorgan.chordrecognizer.C  stygmorgan.fileio.C  stygmorgan.graphfunc.C  stygmorgan.h  stygmorgan.harmonizer.C  stygmorgan.midiexport.C  stygmorgan.midiimport.C  stygmorgan.midiin.C  stygmorgan.midiout.C  stygmorgan.misc.C  stygmorgan.organ.C  stygmorgan.sequencer.C  stygmorganui.cxx  stygmorganui.fl  stygmorganui.h  stygmppui.cxx  stygmppui.fl  stygmppui.h  stygmprefui.cxx  stygmprefui.fl  stygmprefui.h  stygmsequi.cxx  stygmsequi.fl  (+4 more)
stygmorgan/src/.deps/: main.Po  rmgmeditui.Po  rmgmorgan.Po  rmgmorgan.chordrecognizer.Po  rmgmorgan.fileio.Po  rmgmorgan.harmonizer.Po  rmgmorgan.midiimport.Po  rmgmorgan.midiin.Po  rmgmorgan.midiout.Po  rmgmorgan.misc.Po  rmgmorgan.organ.Po  rmgmorganui.Po  rmgmppui.Po  rmgmstui.Po  stygmaboutui.Po  stygmeditui.Po  stygmhelpui.Po  stygmorgan.Po  stygmorgan.chordrecognizer.Po  stygmorgan.fileio.Po  stygmorgan.graphfunc.Po  stygmorgan.harmonizer.Po  stygmorgan.midiexport.Po  stygmorgan.midiimport.Po  stygmorgan.midiin.Po  stygmorgan.midiout.Po  stygmorgan.misc.Po  stygmorgan.organ.Po  stygmorgan.sequencer.Po  stygmorganui.Po  stygmppui.Po  stygmprefui.Po  stygmsequi.Po  stygmstui.Po
