AC_INIT
AC_CONFIG_SRCDIR([src/main.C])
AM_INIT_AUTOMAKE(stygmorgan, 0.27)

AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
AC_C_CONST
AC_C_INLINE
AC_HEADER_STDC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([bzero memset select strdup strstr])
LIBS="`fltk-config --use-images --ldflags` -lasound -lXpm"
CXXFLAGS="-O2 -Wall `fltk-config --use-images --cxxflags`"
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADER(alsa/asoundlib.h, true, AC_MSG_ERROR([Alsa is required]))
AC_PATH_PROG(FLTK_CONFIG, fltk-config, no)
if test "$FLTK_CONFIG" = "no"; then
  AC_MSG_ERROR(fltk-config not found)
fi
AC_OUTPUT(Makefile src/Makefile data/Makefile doc/Makefile doc/html/Makefile doc/examples/Makefile doc/DSPeffects/Makefile )




