AC_INIT([stygmorgan],[0.29],[holborn@telefonica.net])
AC_CONFIG_SRCDIR([src/main.C])
AC_CONFIG_HEADER([src/config.h])
AM_INIT_AUTOMAKE(stygmorgan, 0.29)

AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
AC_C_CONST
AC_C_INLINE
AC_HEADER_STDC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([bzero memset select strdup strstr])


IS64=$(uname -m | grep x86_64) 
if test -z "$IS64"; then
IS64=""
else
IS64=" -D_FILE_OFFSET_BITS=64 "
fi



LIBS="`fltk-config --use-images --ldflags` -lasound -lXpm"
CXXFLAGS="-O2 -Wall $IS64 `fltk-config --use-images --cxxflags`"
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADER(alsa/asoundlib.h, true, AC_MSG_ERROR([Alsa is required]))
AC_PATH_PROG(FLTK_CONFIG, fltk-config, no)
if test "$FLTK_CONFIG" = "no"; then
  AC_MSG_ERROR(fltk-config not found)
fi
AC_CHECK_PROG([ACONNECT],[aconnect],[aconnect])
if test -z "$ACONNECT"; then
  AC_MSG_ERROR([aconnect not installed!])
fi


# Checks for libraries.
AC_CHECK_LIB([Xft], [main])
AC_CHECK_LIB([Xrender], [main])
AC_CHECK_LIB([asound], [main])
AC_CHECK_LIB([dl], [main])
AC_CHECK_LIB([fltk], [main])
AC_CHECK_LIB([fontconfig], [main])
AC_CHECK_LIB([freetype], [main])
AC_CHECK_LIB([Xpm],[main])

if test "x$prefix" == "xNONE"; then
prefix=/usr/local
fi


DATADIR="$prefix/share/${PACKAGE}"
HELPDIR="$prefix/share/doc/${PACKAGE}"

AC_DEFINE_UNQUOTED(DATADIR,"$DATADIR",[DATADIR])
AC_DEFINE_UNQUOTED(HELPDIR,"$HELPDIR",[HELPDIR])
AC_DEFINE([WEBSITE],["stygmorgan.berlios.de"],[WEBSITE])




AC_OUTPUT(Makefile src/Makefile data/Makefile doc/Makefile doc/html/Makefile doc/examples/Makefile doc/DSPeffects/Makefile )




