datadir = $(prefix)/share/${PACKAGE}
helpdir = $(prefix)/share/doc/${PACKAGE}
DEFS = -DHELPDIR=\"$(helpdir)\" -DDATADIR=\"$(datadir)\" @DEFS@
bin_PROGRAMS = stygmorgan
stygmorgan_SOURCES = main.C \
	stygmorgan.C \
	stygmorgan.midiimport.C \
	stygmorgan.midiin.C \
	stygmorgan.midiout.C \
	stygmorgan.organ.C \
	stygmorgan.sequencer.C \
	stygmorgan.harmonizer.C \
	stygmorgan.chordrecognizer.C \
        stygmorgan.midiexport.C \
	stygmorganui.cxx \
	stygmorganui.h \
	stygmeditui.cxx \
	stygmeditui.h \
	stygmsequi.cxx \
	stygmsequi.h \
        stygmstui.h \
        stygmstui.cxx \
        stygmppui.h \
        stygmppui.cxx \
        stygmprefui.cxx \
        stygmprefui.h \
        stygmaboutui.cxx \
        stygmaboutui.h \
        stygmhelpui.cxx \
        stygmhelpui.h \
	stygmorgan.fileio.C \
	stygmorgan.misc.C \
	stygmorgan.graphfunc.C \
	stygmorgan.h


