docdir = $(prefix)/share/doc/${PACKAGE}/html
doc_DATA= stygmorgan.html \
	MainWin.png \
	MezWin.png \
	MoreWin.png \
	stygmorgandia.png \
	stygmicon128back2.jpg \
	stygmorgan.html \
	editevent.png \
	editevent1.png \
	EvWin.png \
	EdPatWin.png \
	EdStyWin \
	SeqWin.png \
	SeqWin1.png \
	TempoTrack.png
	
	
	
	
	
	
	
	